--- a/sass/style.sass
+++ b/sass/style.sass
@@ -112,6 +112,7 @@ html
       align-items: center
       height: calc((1260px)*.22/(8/13))
       .card
+        padding: 0 10px
         display: block
         aspect-ratio: 8/13
         width: 20%
@@ -174,6 +175,8 @@ html
       justify-content: space-between
       flex-wrap: wrap
       .card
+        bottom: 0
+        position: relative
         padding-top: 10px
         overflow: hidden
         margin-top: 0
@@ -181,7 +184,38 @@ html
         height: 450px
         width: 300px
         border-radius: 20px
+        transition: .3s
+        i
+          position: absolute
+          top: 30px
+          right: 30px
+          font-size: 15pt
+          color: grey
+          z-index: 1000
+          float: right
+        .hover-bg
+          position: absolute
+          top: 0
+          z-index: 1
+          opacity: 0
+          width: 100%
+          height: 100%
+          background-color: black
+          transition: .2s
+        &:hover
+          bottom: 10px
+          border: 5px solid rgb(1,84,0)
+          .hover-bg
+            opacity: .1
+          .type
+            color: rgb(1,84,0) !important
+          span
+            color: rgb(1,84,0) !important
+          i
+            color: rgb(1,84,0)
         .picture
+          position: relative
+          z-index: 0
           height: 60%
           background-size: contain
           background-position: center
@@ -191,24 +225,32 @@ html
           padding: 20px 20px 0 20px
           flex-direction: column
           h4
+            position: relative
+            z-index: 5
             margin-top: 0px
             font-size: 20pt
             color: black
           .type
+            position: relative
+            z-index: 5
             color: grey
           .bot
-            width: 260px
+            width: calc(100% - 40px)
             display: flex
             justify-content: space-between
             align-items: center
             position: absolute
             bottom: 20px
             .price
-              font-size: 20pt
+              position: relative
+              z-index: 5
+              font-size: 23pt
               color: black
               span
                 color: gray
             .avaib
+              position: relative
+              z-index: 5
               font-size: 12pt
               color: black
               &::before
@@ -218,4 +260,4 @@ html
                 width: 10px
                 height: 10px
                 border-radius: 100%
-                background-color: green
+                background-color: rgb(1,84,0)
