--- a/sass/style.sass
+++ b/sass/style.sass
@@ -261,3 +261,38 @@ html
                 height: 10px
                 border-radius: 100%
                 background-color: rgb(1,84,0)
+
+.reviews
+  padding: 50px 0
+  .wrap
+    margin: 0 auto
+    width: 100%
+    display: flex
+    justify-content: space-between
+    flex-wrap: wrap
+    .card
+      padding: 20px
+      border: solid 3px black
+      margin-top: 0
+      margin-bottom: 30px
+      height: 250px
+      width: 400px
+      border-radius: 20px
+      transition: .3s
+      .name
+        font-size: 17pt
+        margin-bottom: 10px
+      .type
+        color: green
+      img
+        position: absolute
+        bottom: -20px
+        right: -20px
+        width: 60px
+        height: 60px     
+        border-radius: 100% 
+        border: solid black 3px
+
+.footer
+  background-color: #49423D
+  height: 400px
