--- a/sass/style.sass
+++ b/sass/style.sass
@@ -50,7 +50,7 @@ header
         line-height: 80px
         font-size: 20pt
 .home
-  margin: 80px auto 0 auto
+  padding: 80px 0 0 0
   width: 100vw
   height: 500px
   background-color: #734222
@@ -135,17 +135,6 @@ header
         background-image: linear-gradient(180deg, rgba(1,84,0,0.4) 0%, rgba(1,84,0,1) 100%),url("../img/home/categories/classical.jpeg")
         background-size: 110%
         background-position: center
-        &:hover
-          width: 22%
-          background-size: 100%
-          .desc-wrap
-            height: 330px
-            i
-              bottom: 260px
-            p
-              top: 80px
-              opacity: 1
-
         .desc-wrap
           position: relative
           width: 100%
@@ -174,6 +163,21 @@ header
           text-align: center
           color: #F5F5F5
           font-size: 20pt
+@media only screen and (min-width: 600px)
+  .categories
+    .wrap
+      .cards
+        .card
+          &:hover
+            width: 22%
+            background-size: 100%
+            .desc-wrap
+              height: 330px
+              i
+                bottom: 260px
+              p
+                top: 80px
+                opacity: 1
 @media only screen and (max-width: 600px)
   .container
     width: 90%
@@ -219,7 +223,6 @@ header
 
 .top-sellers
   padding: 50px 0
-
   background-color: #8fbc8f
   .container
     .sec-name
@@ -330,20 +333,20 @@ header
           .desc
             padding: 10px 15px 0 15px
             .type
-              font-size: 9pt
-              margin-bottom: 5px
+              font-size: 2.5vw
+              margin-bottom: 2%
             h4
-              font-size: 12pt
+              font-size: 4vw
             .bot
               width: calc(100% - 30px)
               bottom: 10px
               .avaib
-                font-size: 8pt
+                font-size: 2.3vw
                 &::before
                   width: 8px
                   height: 8px
               .price
-                font-size: 12pt
+                font-size: 3.5vw
 .reviews
   padding: 50px 0 30px 0
   .wrap
@@ -465,3 +468,23 @@ header
       width: 1.5px
       border-radius: 3px
       margin: 0 5px
+@media only screen and (max-width: 600px)
+  .footer
+    .wrap
+      flex-direction: column
+      .desc
+        width: 100%
+        p
+          font-size: 12pt
+      .sep
+        width: 100%
+        height: 3px
+        margin: 20px 0
+    .legal
+      width: 100%
+      display: flex
+      flex-direction: column
+      span
+        line-height: 20px
+      .sep
+        display: none
