mobile version fixes

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -176,7 +176,7 @@ header
           .desc-wrap
             height: 70%
             p
-              font-size: 8pt
+              font-size: 2.5vw
             i
               font-size: 18pt
           h4
@@ -184,6 +184,8 @@ header
             font-size: 11pt
             margin-bottom: 0px
           .expand
+            position: relative
+            z-index: 10000
             color: white
             text-align: center
             font-size: 9pt
@@ -312,20 +314,20 @@ header
           .desc
             padding: 10px 15px 0 15px
             .type
-              font-size: 9pt
-              margin-bottom: 5px
+              font-size: 2.5vw
+              margin-bottom: 2%
             h4
-              font-size: 12pt
+              font-size: 4vw
             .bot
               width: calc(100% - 30px)
               bottom: 10px
               .avaib
-                font-size: 8pt
+                font-size: 2.3vw
                 &::before
                   width: 8px
                   height: 8px
               .price
-                font-size: 12pt
+                font-size: 3.5vw
 .reviews
   padding: 50px 0 30px 0
   .wrap
