--- a/sass/style.sass
+++ b/sass/style.sass
@@ -26,6 +26,7 @@ header
   top: 0
   z-index: 100000
   width: 100%
+  height: 80px
   position: fixed
   .container
     display: flex
@@ -49,22 +50,37 @@ header
         position: relative
         line-height: 80px
         font-size: 20pt
+@media only screen and (max-width: 600px)
+  header
+    height: 50px
+    .container
+      > span
+        line-height: 50px
+        font-size: 15pt
+      .mini-menu
+        .logo
+          line-height: 50px
+          font-size: 15pt
+          margin-right: 20px
+          bottom: 2px
+        .bars
+          line-height: 50px
+          font-size: 16pt
+
 .home
-  margin: 80px auto 0 auto
+  margin: 0 auto
+  padding-top: 80px
   width: 100vw
   background-size: 100% 100%
 
   .container
-    height: 100%
     margin: 0 auto
     padding: 30px 0px 40px 0px
     .wrap
-      height: 350px
       display: flex
       justify-content: space-between
       .info
         width: 50%
-        height: 320px
         display: flex
         flex-direction: column
         justify-content: space-between
@@ -94,6 +110,28 @@ header
         align-items: center
         img
           width: 100%
+@media only screen and (max-width: 600px)
+  .home
+    padding-top: 50px
+    .container
+      .wrap
+        flex-direction: column-reverse
+        align-items: center
+        .picture
+          width: 80%
+          margin-bottom: 30px 
+        .info
+          width: 100%
+          h1
+            font-size: 25pt
+            text-align: center
+            width: 100%
+            height: 200px
+          .options
+            width: 100%
+            text-align: center
+            button
+              margin: 0
 
 .categories
   background-color: #F5F5F5
@@ -117,17 +155,6 @@ header
         background-image: linear-gradient(180deg, rgba(1,84,0,0.4) 0%, rgba(1,84,0,1) 100%),url("../img/home/categories/classical.jpeg")
         background-size: 110%
         background-position: center
-        &:hover
-          width: 22%
-          background-size: 100%
-          .desc-wrap
-            height: 330px
-            i
-              bottom: 260px
-            p
-              top: 80px
-              opacity: 1
-
         .desc-wrap
           position: relative
           width: 100%
@@ -156,6 +183,16 @@ header
           text-align: center
           color: #F5F5F5
           font-size: 20pt
+      .on-hover
+        width: 22%
+        background-size: 100%
+        .desc-wrap
+          height: 330px
+          i
+            bottom: 260px
+          p
+            top: 80px
+            opacity: 1
 @media only screen and (max-width: 600px)
   .container
     width: 90%
@@ -343,7 +380,7 @@ header
       margin-top: 0
       margin-bottom: 30px
       height: 200px
-      width: 400px
+      max-width: 400px
       border-radius: 20px
       transition: .3s
       .name
@@ -393,6 +430,7 @@ header
             transition-duration: .3s
             opacity: 1
             background-color: black
+@media only screen and (max-width: 600px)
 
 .footer
   padding: 40px 0 20px 0
