--- a/sass/style.sass
+++ b/sass/style.sass
@@ -436,6 +436,7 @@ header
     .container
       .wrap
         .card
+          max-width: 100%
           .picture
             width: 50px
             height: 50px
