--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,8 +4,6 @@
   box-sizing: border-box
   font-family: 'Gogh', sans-serif
 
-html
-  overflow-x: hidden
 .hidden
   opacity: 0
 .sec-name
@@ -21,6 +19,88 @@ html
 
 .container
   width: 1260px
+
+.on-background
+  overflow: hidden
+
+.item-page-wrap
+  z-index: 1000000
+  position: fixed
+  top: 0
+  left: 0
+  width: 100vw
+  height: 100vh
+  background-color: rgba(0, 0, 0, .5)
+  display: flex
+  justify-content: center
+  align-items: center
+  .item-page
+    padding: 30px 5px
+    width: 75%
+    min-width: 1280px
+    height: 85%
+    border-radius: 30px
+    background-color: white
+    &-container
+      padding: 25px
+      height: 100%
+      overflow: scroll
+      display: flex
+      justify-content: center
+      .images
+        display: flex
+        .image-wrap
+          .image-carousel
+            overflow: hidden
+            position: relative
+            box-sizing: content-box
+            border: 5px solid black
+            height: 400px
+            margin: 0 auto
+            aspect-ratio: 1
+            border-radius: 20px
+            margin-bottom: 20px
+            .image-carousel-wrap
+              transition-duration: .2s
+              display: flex
+              height: 100%
+              position: relative
+              right: 0px
+              .image
+                height: 100%
+                aspect-ratio: 1
+                background-color: white
+                background-size: auto 100%
+                background-position: center
+                background-repeat: no-repeat
+          .switch
+            margin-left: auto
+            width: 400px
+            display: flex
+            justify-content: space-between
+            i
+              margin: 0 10px
+              font-size: 50px
+              color: grey
+        .indicators
+          height: 90%
+          margin-right: 30px
+          .indicator
+            border: 2px solid grey
+            background-color: white
+            background-size: auto 100%
+            background-position: center
+            background-repeat: no-repeat
+            width: 80px
+            height: 80px
+            margin-bottom: 20px
+            border-radius: 10px
+          .active
+            border-width: 4px 
+      .desc
+        background-color: green
+        height: 500px
+        width: 45%
 
 header
   top: 0
