--- a/sass/style.sass
+++ b/sass/style.sass
@@ -35,72 +35,126 @@
   justify-content: center
   align-items: center
   .item-page
-    padding: 30px 5px
-    width: 75%
+    padding: 25px 5px 25px 5px
+    width: 70%
     min-width: 1280px
     height: 85%
     border-radius: 30px
     background-color: white
     &-container
-      padding: 25px
+      padding: 0px 80px 30px 80px
       height: 100%
       overflow: scroll
-      display: flex
       justify-content: center
-      .images
+      .top-container
         display: flex
-        .image-wrap
-          .image-carousel
-            overflow: hidden
-            position: relative
-            box-sizing: content-box
-            border: 5px solid black
-            height: 400px
-            margin: 0 auto
-            aspect-ratio: 1
-            border-radius: 20px
-            margin-bottom: 20px
-            .image-carousel-wrap
-              transition-duration: .2s
-              display: flex
-              height: 100%
+        justify-content: space-between
+        margin-bottom: 50px
+        .images
+          display: flex
+          .image-wrap
+            .image-carousel
+              overflow: hidden
               position: relative
-              right: 0px
-              .image
+              box-sizing: content-box
+              border: 5px solid black
+              height: 400px
+              margin: 0 auto
+              aspect-ratio: 1
+              border-radius: 20px
+              margin-bottom: 20px
+              .image-carousel-wrap
+                transition-duration: .2s
+                display: flex
                 height: 100%
-                aspect-ratio: 1
+                position: relative
+                right: 0px
+                .image
+                  height: 100%
+                  aspect-ratio: 1
+                  background-color: white
+                  background-size: auto 100%
+                  background-position: center
+                  background-repeat: no-repeat
+            .switch
+              margin-left: auto
+              width: 400px
+              display: flex
+              justify-content: space-between
+              i
+                margin: 0 10px
+                font-size: 50px
+                color: grey
+          .indicators-wrap
+            height: 480px
+            overflow: hidden
+            margin-right: 30px
+            .indicators
+              position: relative
+              top: 0px
+              transition-duration: .2s
+              .indicator
+                border: 2px solid grey
                 background-color: white
                 background-size: auto 100%
                 background-position: center
                 background-repeat: no-repeat
-          .switch
-            margin-left: auto
-            width: 400px
-            display: flex
-            justify-content: space-between
+                width: 80px
+                height: 80px
+                margin-bottom: 20px
+                border-radius: 10px
+              .active
+                border-width: 4px
+        .info
+          width: 45%
+          .type
+            font-size: 15pt
+          .name-wrap
+            height: 230px
+            .name
+              font-size: 30pt
+              margin-top: 0px
+              margin-bottom: 0px
+            .guarantee
+              font-size: 13pt
+          .price
+            text-align: right
+            font-size: 35pt
+            margin-bottom: 10px
+          .buttons
+            text-align: right
+            .buy-now
+              border: none
+              color: white
+            button
+              font-size: 15pt
+              font-family: 'Gogh', sans-serif
+              background-color: transparent
+              border-radius: 20px
+              border: 3px solid
+              height: 70px
+              width: 200px
+              margin-left: 20px
+              margin-bottom: 20px
+              i
+                font-size: 15pt
+          .delivery-options
+            text-align: right
+            font-size: 13pt
             i
-              margin: 0 10px
-              font-size: 50px
-              color: grey
-        .indicators
-          height: 90%
-          margin-right: 30px
-          .indicator
-            border: 2px solid grey
-            background-color: white
-            background-size: auto 100%
-            background-position: center
-            background-repeat: no-repeat
-            width: 80px
-            height: 80px
-            margin-bottom: 20px
-            border-radius: 10px
-          .active
-            border-width: 4px 
+              font-size: 11pt
+            a
+              border-bottom: 1px dashed
+
       .desc
-        background-color: green
-        height: 500px
-        width: 45%
+        > div
+          padding: 15px
+          border-radius: 10px
+          border: 2px solid black
+          strong
+            font-size: 13pt
+          p
+            margin-bottom: 10px
 
 header
   top: 0
