--- a/sass/items.sass
+++ b/sass/items.sass
@@ -143,7 +143,7 @@
 						font-size: 17pt
 
 @media only screen and (max-width: 600px)
-	.item-page-wrap
+	.items
 		.item-page
 			width: 95%
 			height: 95%
@@ -219,7 +219,7 @@
 						h3
 							font-size: 13pt
 
-.top-sellers
+.items
 	padding: 50px 0
 
 	background-color: #8fbc8f
