categories colored, map page completed

--- a/sass/category.sass
+++ b/sass/category.sass
@@ -1,5 +1,18 @@
 header
-	background-color: #8fbc8f !important
 	color: white
+
+@media only screen and (max-width: 600px)
 	span.cur-page
-		font-size: 10pt
+		font-size: 3vw !important
+
+.electric
+	background-color: #CD5C5C !important
+
+.acoustic
+	background-color: #8fbc8f !important
+
+.classical
+	background-color: #9ACEEB !important
+
+.acessories
+	background-color: #FFCC99 !important
