--- a/sass/base.sass
+++ b/sass/base.sass
@@ -1,3 +1,7 @@
+header
+  background-color: white
+  color: black
+  
 *
   padding: 0
   margin: 0
@@ -30,24 +34,24 @@ main
 .sec-name
   font-size: 30pt
   margin-top: 0
-  margin-bottom: 20px
+  margin-bottom: 10px
 .line
   margin: auto
   width: 100%
   height: 3px
   background-color: black
   border-radius: 10px
-  margin-bottom: 30px
+  margin-bottom: 20px
 
 .container
   width: 1260px
 @media only screen and (max-width: 600px)
   main
-    padding-top: 0px
+    padding-top: 50px
   .container
     width: 90%
     .sec-name
-      font-size: 25pt
+      font-size: 20pt
     .line
       margin-bottom: 20px
 
