--- a/sass/shop.sass
+++ b/sass/shop.sass
@@ -1,6 +1,4 @@
-﻿header
-  background-color: white
-  color: black
+﻿
 
 .categories
   padding: 20px 0 50px 0
@@ -40,8 +38,6 @@
           top: 2px
           font-size: 15pt
 @media only screen and (max-width: 600px)
-  main
-    padding-top: 50px
   .categories
     padding: 10px 0 30px 0
     .cards
