many minor changes

--- a/fonts/logo/style.css
+++ b/fonts/logo/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?2ittrn');
-  src:  url('fonts/icomoon.eot?2ittrn#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?2ittrn') format('truetype'),
-    url('fonts/icomoon.woff?2ittrn') format('woff'),
-    url('fonts/icomoon.svg?2ittrn#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ygx0dg');
+  src:  url('fonts/icomoon.eot?ygx0dg#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ygx0dg') format('truetype'),
+    url('fonts/icomoon.woff?ygx0dg') format('woff'),
+    url('fonts/icomoon.svg?ygx0dg#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
