--- a/sass/adress.sass
+++ b/sass/adress.sass
@@ -12,7 +12,6 @@
 			border: 2px solid black
 			border-radius: 10px
 
-
 .adresses
 	margin-bottom: 50px
 	.container
@@ -22,3 +21,17 @@
 		border-radius: 20px
 		.sec-name
 			text-align: center
+		.items
+			text-align: center
+			a
+				font-size: 13pt
+				cursor: pointer
+				&:hover
+					opacity: .8
+			.sep
+				display: inline-block
+				height: .8rem
+				background-color: #383838
+				width: 1.5px
+				border-radius: 3px
+				margin: 0 5px
