--- a/sass/base.sass
+++ b/sass/base.sass
@@ -27,6 +27,7 @@ main
 
 .hidden
   opacity: 0
+  cursor: default !important
 
 .full-hid
   display: none !important
@@ -216,6 +217,7 @@ footer
     display: flex
     justify-content: center
     i
+      cursor: pointer
       font-size: 30pt
       margin: 0 15px
   .legal
@@ -226,6 +228,7 @@ footer
     flex-wrap: wrap
     align-items: center
     span
+      cursor: pointer
       line-height: 1rem
       font-size: 8pt
     .sep
