--- a/sass/home.sass
+++ b/sass/home.sass
@@ -2,7 +2,7 @@
 .wrapper
   position: absolute
   top: 0
-  
+
 .home
   margin: 0 auto
   width: 100vw
@@ -168,8 +168,6 @@
               top: 30%
               opacity: 1
 
-              
-
 .reviews
   padding: 50px 0 30px 0
   .wrap
@@ -207,10 +205,12 @@
     align-items: center
     justify-content: space-between
     .fa-solid
+      cursor: pointer
       font-size: 25pt
     .indicators
       display: flex
       .indicator
+        cursor: pointer
         border: 3px solid black
         width: 30px
         height: 30px
@@ -259,4 +259,3 @@
               left: 3px
         .fa-solid
           font-size: 20pt
-
