about page completed

--- a/sass/about.sass
+++ b/sass/about.sass
@@ -1,6 +1,16 @@
 header
-    background-color: #fdf5e6
-    color: #383838
+	background-color: #fdf5e6
+	color: #383838
 main
-    background-color: #fdf5e6
-    color: #383838
+	background-color: #fdf5e6
+	color: #383838
+	.container
+		> *
+			font-size: 15pt
+			margin-bottom: 20px
+		ul
+			list-style-position: inside
+			li
+				list-style-type: disc !important
+
+
