news page changes

--- a/sass/news.sass
+++ b/sass/news.sass
@@ -9,5 +9,13 @@ main
       display: flex
       .text
         width: 70%
+        p
+          width: 90%
+          font-size: 13pt
       .picture
         width: 30%
+    #it1
+      .picture
+        height: 250px
+        background-image: url("../img/news/73a525ebd40022b9c13aa3229e9b84fb.jpg")
+        background-size: auto 100% 
