--- a/sass/news.sass
+++ b/sass/news.sass
@@ -5,17 +5,64 @@ main
   background-color: #fdf5e6
   color: #383838
   .container
+    .sep
+      width: 95%
+      margin: 0 auto
+      height: 3px
+      background-color: #383838
+      margin-bottom: 30px
     .news-item
+      cursor: pointer
+      margin-bottom: 20px
       display: flex
       .text
+        position: relative
         width: 70%
         p
           width: 90%
           font-size: 13pt
+        .date
+          font-size: 16pt
+          position: absolute
+          right: 40px
+          bottom: 0
       .picture
         width: 30%
+        background-size: auto 100%
+        height: 250px
+        background-repeat: no-repeat
     #it1
       .picture
-        height: 250px
-        background-image: url("../img/news/73a525ebd40022b9c13aa3229e9b84fb.jpg")
-        background-size: auto 100% 
+        background-image: url("../img/news/1.jpg")
+    #it2
+      .picture
+        background-image: url("../img/news/2.jpeg")
+    #it3
+      .picture
+        background-image: url("../img/news/3.png")
+    #it4
+      .picture
+        background-image: url("../img/news/4.jpeg")
+
+@media only screen and (max-width: 600px)
+  main
+    .container
+      .news-item
+        flex-direction: column-reverse
+        .text
+          width: 100%
+          p
+            width: 100%
+            margin-right: 0px
+            text-align: center
+            font-size: 12pt
+            margin-bottom: 10px
+          .date
+            position: static
+            text-align: right
+            font-size: 13pt
+        .picture
+          width: 80%
+          height: 180px
+          margin: 0 auto
+          margin-bottom: 10px
