mobile 404 pae ready

--- a/sass/404.sass
+++ b/sass/404.sass
@@ -13,8 +13,10 @@ main
     justify-content: center
     flex-direction: column
     h1
+        text-align: center
         margin: 0 0 10px 0
     .desc
+        text-align: center
         font-size: 17pt
     a
         text-decoration: underline
