minor interactivity changes

--- a/sass/item-page.sass
+++ b/sass/item-page.sass
@@ -114,6 +114,7 @@
 							border: none
 							color: white
 						button
+							cursor: pointer
 							font-size: 15pt
 							font-family: 'Gogh', sans-serif
 							background-color: transparent
@@ -123,8 +124,14 @@
 							aspect-ratio: 20/7
 							margin-left: 20px
 							margin-bottom: 20px
+							transition: .3s
 							i
 								font-size: 15pt
+						.add-to-cart:hover
+							background-color: gray
+							color: white
+							border-color: gray
+
 					.delivery-options
 						text-align: right
 						font-size: 13pt
